Fix error in NavigatorBean class when compiling with JDK8.